// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with options 1`] = `
<div
  data-simplebar={true}
  data-simplebar-auto-hide="false"
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;

exports[`renders with scrollableNodeProps 1`] = `
<div
  data-simplebar={true}
  data-simplebar-auto-hide="false"
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content test"
            data-test="test"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  data-simplebar={true}
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;
